fix layout issue

--- a/src/app/sprint/sprint-burndown.component.scss
+++ b/src/app/sprint/sprint-burndown.component.scss
@@ -9,7 +9,3 @@
 /deep/  .c3 .c3-axis-y line {
     stroke: #757575;
 }
-
-md-card{
- width:900px;
-}
